k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
   - host: go-web-app.local
     http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: go-webapp-service
              port:
               number: 80
